test/errors/packages_error/zs/ambiguous_single_type_import_error/imported.zs
package ambiguous_single_type_import_error.imported;

struct Structure
{
    uint32 value;
};
